--- a/views/index.html
+++ b/views/index.html
@@ -1,1 +1,49 @@
-Hurray, it works!
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+    <title>Login</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+<section class="section">
+    <div class="container">
+        <div class="card is-one-third column is-offset-one-third">
+            <header class="card-header has-text-centered">
+                <p class="card-header-title has-text-centered">
+                    Login
+                </p>
+                </a>
+            </header>
+            <div class="card-content">
+                <div class="content">
+                    <div class="field">
+                        <label class="label">Name</label>
+                        <div class="control">
+                            <input class="input" type="text" placeholder="Your Name">
+                        </div>
+                    </div>
+
+                    <div class="field">
+                        <label class="label">Password</label>
+                        <div class="control">
+                            <input class="input" type="password" placeholder="Your Password">
+                        </div>
+                    </div>
+                    <div class="has-text-centered">
+                        <a class="button is-link">Go!</a>
+                    </div>
+                </div>
+            </div>
+            <footer class="card-footer">
+                <a href="#" class="card-footer-item">Register</a>
+            </footer>
+        </div>
+    </div>
+</section>
+</body>
+</html>
