Edit Modal and add Modal

--- a/views/register.html
+++ b/views/register.html
@@ -15,7 +15,7 @@
         <div class="card is-one-third column is-offset-one-third">
             <header class="card-header has-text-centered">
                 <p class="card-header-title has-text-centered">
-                    Login
+                    Register
                 </p>
                 </a>
             </header>
@@ -34,14 +34,22 @@
                             <input class="input" type="password" placeholder="Your Password">
                         </div>
                     </div>
+
+                    <div class="field">
+                        <label class="label">Repeat Password</label>
+                        <div class="control">
+                            <input class="input" type="password" placeholder="Repeat Password">
+                        </div>
+                    </div>
+
                     <div class="has-text-centered">
                         <a class="button is-link">Go!</a>
                     </div>
                 </div>
             </div>
-            <!--<footer class="card-footer">
-                <a href="#" class="card-footer-item">Register</a>
-            </footer>-->
+            <footer class="card-footer">
+                <a href="#" class="card-footer-item">Login</a>
+            </footer>
         </div>
     </div>
 </section>
