--- a/views/index.html
+++ b/views/index.html
@@ -45,10 +45,11 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+{ js js/main.js }
 <script>
 
     $("#submit").click(function () {
-        $.post("{ :app_url }/api/login", {
+        $.post("{ :app_url }api/login", {
             email: $("#email").val(),
             password: $("#password").val()
         }, function (data, status) {
@@ -64,15 +65,10 @@
                         '  <button class="delete"></button>Success! Redirecting to Dashboard in 3 seconds. Not working? <a href="{ :app_url }/dashboard">Click here</a></div>').hide().fadeIn("slow")
                 );
                 setTimeout(function() {
-                    location.replace("{ :app_url }/dashboard");
+                    location.replace("{ :app_url }dashboard");
                 }, 3000);
             }
         });
-    });
-
-    $(document).on('click', '.notification > button.delete', function() {
-        $(this).parent().fadeOut("slow");
-        return false;
     });
 
 </script>
