domain and dns overview

--- a/views/domains.html
+++ b/views/domains.html
@@ -41,8 +41,8 @@
                             <td>{ :domain.name }</td>
                             <td class="has-text-centered"><i class="material-icons">done</i></td>
                             <td class="has-text-centered"><i class="material-icons">done</i></td>
-                            <td>27.05.2099</td>
-                            <td><a class="button is-primary"><i class="material-icons" style="font-size:18px;">build</i>   Edit</a></td>
+                            <td>{ :domain.since }</td>
+                            <td><a href="{ :app_url }dns/{ :domain.id }" class="button is-primary"><i class="material-icons" style="font-size:18px;">build</i>   Edit</a></td>
                         </tr>
                         { endforeach }
                         </tbody>
