--- a/views/dns.html
+++ b/views/dns.html
@@ -7,19 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
     <title>DNS-Entries</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+    <title>Setup</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
     <link rel="stylesheet" href="css/domains.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
 </head>
 <body>
 <section class="section">
     <div class="container">
         <div class="card is-8 column is-offset-2">
-            <header class="card-header has-text-centered">
-                <p class="card-header-title has-text-centered">
-                    Your DNS-Entries
-                </p>
-                </a>
+            <header class="card-header has-text-centered"><a href="{ :app_url }dashboard" class="button is-info"><i class="material-icons">arrow_back</i> Domains</a>
+                <p class="card-header-title has-text-centered">Your DNS-Entries</p>
             </header>
             <div class="card-content">
                 <div class="content">
@@ -47,9 +48,11 @@
                             <td class="has-text-centered">{ :rec.TTL }</td>
                             <td class="has-text-centered">
                                 <div>
-                                    <a class="button is-primary" onclick="editDomain()"><i class="material-icons" style="font-size:18px;">build</i>Edit</a>
+                                    <a class="button is-primary" onclick="editDomain()"><i class="material-icons"
+                                                                                           style="font-size:18px;">build</i>Edit</a>
 
-                                    <a class="button is-danger"><i class="material-icons" style="font-size: 18px;">close</i></a>
+                                    <a class="button is-danger"><i class="material-icons"
+                                                                   style="font-size: 18px;">close</i></a>
                                 </div>
                             </td>
                         </tr>
@@ -126,6 +129,7 @@
         var element = document.getElementById("addDomain");
         element.classList.toggle("is-active");
     }
+
     function editDomain() {
         var element = document.getElementById("editDomain");
         element.classList.toggle("is-active");
